--- a/templates/account/index.html
+++ b/templates/account/index.html
@@ -1,9 +1,5 @@
-<!DOCTYPE html>
-<html>
-	{% include "partials/head.html" %}
-	{% include "partials/navbar.html" %}
-	{% include "partials/archdev-navbar.html" %}
-
+{% extends "partials/layout.html" %}
+{% block body %}
     <div id="search-results">
         {% if not users %}
             {{ "No results matched your search criteria." | tr }}
@@ -11,7 +7,5 @@
             {% include "partials/account/results.html" %}
         {% endif %}
     </div>
-
-    {% include "partials/footer.html" %}
-</html>
-{# vim: set ts=4 sw=4 expandtab: #}
+{% endblock %}
+{# vim: set sw=4 expandtab: #}
