--- a/templates/packages/index.html
+++ b/templates/packages/index.html
@@ -1,9 +1,5 @@
-<!DOCTYPE html>
-<html>
-    {% include "partials/head.html" %}
-	{% include "partials/navbar.html" %}
-	{% include "partials/archdev-navbar.html" %}
-
+{% extends "partials/layout.html" %}
+{% block body %}
     {% if errors %}
 
         <ul class="errorlist">
@@ -52,6 +48,5 @@
         </div>
 
     {% endif %}
-    {% include "partials/footer.html" %}
-
+{% endblock %}
 {# vim: set ts=4 sw=4 expandtab: #}
