--- a/templates/addvote.html
+++ b/templates/addvote.html
@@ -1,9 +1,5 @@
-<!DOCTYPE html>
-<html>
-    {% include "partials/head.html" %}
-	{% include "partials/navbar.html" %}
-	{% include "partials/archdev-navbar.html" %}
-
+{% extends "partials/layout.html" %}
+{% block body %}
     {% if error %}
         <p class="pkgoutput error">{{ error | e }}</p></p>
     {% endif %}
@@ -54,8 +50,5 @@
         </fieldset>
         </form>
     </div>
-
-    {% include "partials/footer.html" %}
-</html>
-
+{% endblock %}
 {# vim: set ts=4 sw=4 expandtab: #}
