--- a/templates/pkgbase/comments/edit.html
+++ b/templates/pkgbase/comments/edit.html
@@ -1,9 +1,5 @@
- <!DOCTYPE html>
-<html>
-    {% include "partials/head.html" %}
-	{% include "partials/navbar.html" %}
-	{% include "partials/archdev-navbar.html" %}
-    
+{% extends "partials/layout.html" %}
+{% block body %}
     <div class="box">
         <form action="/pkgbase/{{ comment.PackageBase.Name }}/comments/{{ comment.ID }}"
               method="post">
@@ -38,10 +34,7 @@
                 <div class="item">
                     <input type="submit" value="{{ 'Save' | tr }}" />
                 </div>
-
             </fieldset>
         </form>
-
     </div>
-</html>
-{# vim: set ts=4 sw=4 expandtab: #}
+{# vim: set sw=4 expandtab: #}
