--- a/templates/pkgbase/disown.html
+++ b/templates/pkgbase/disown.html
@@ -1,9 +1,5 @@
- <!DOCTYPE html>
-<html>
-    {% include "partials/head.html" %}
-    {% include "partials/navbar.html" %}
-    {% include "partials/archdev-navbar.html" %}
-        
+{% extends "partials/layout.html" %}
+{% block body %}
     <div class="box">
         <form action="/pkgbase/{{ pkgbase.Name }}/disown" method="post">
             <fieldset>
@@ -67,5 +63,5 @@
             </fieldset>
         </form>
     </div>
-</html>
-{# vim: set ts=4 sw=4 expandtab: #}
+{% endblock %}
+{# vim: set sw=4 expandtab: #}
