--- a/templates/pkgbase/flag-comment.html
+++ b/templates/pkgbase/flag-comment.html
@@ -1,9 +1,5 @@
- <!DOCTYPE html>
-<html>
-	{% include "partials/head.html" %}
-	{% include "partials/navbar.html" %}
-	{% include "partials/archdev-navbar.html" %}
-    
+{% extends "partials/layout.html" %}
+{% block body %}
     <div class="box field">
         <h2>{{ "Flagged Out-of-Date Comment: %s" | tr | format(pkgbase.Name) }}</h2>
 
@@ -42,7 +38,5 @@
             <input type="submit" value="{{ 'Return to Details' | tr }}" />
         </form>
     </div>
-
-    {% include "partials/footer.html" %}
-</html>
-{# vim: set ts=4 sw=4 expandtab: #}
+{% endblock %}
+{# vim: set sw=4 expandtab: #}
