--- a/templates/pkgbase/merge.html
+++ b/templates/pkgbase/merge.html
@@ -1,9 +1,5 @@
- <!DOCTYPE html>
-<html>
-	{% include "partials/head.html" %}
-	{% include "partials/navbar.html" %}
-	{% include "partials/archdev-navbar.html" %}
-    
+{% extends "partials/layout.html" %}
+{% block body %}
     <div class="box field">
         <div class="item">
             {% if errors %}
@@ -72,7 +68,5 @@
             </fieldset>
         </form>
     </div>
-
-    {% include "partials/footer.html" %}
-</html>
-{# vim: set ts=4 sw=4 expandtab: #}
+{% endblock %}
+{# vim: set sw=4 expandtab: #}
