Added support for automatic out of date notifications via Repology
Also removed Sharness tests - like the other unit tests the other day, we'll add these back as issues pop up.

--- a/media/scss/main.scss
+++ b/media/scss/main.scss
@@ -11,6 +11,7 @@
 @import "packages";
 @import "tu";
 @import "pkgstats";
+@import "animations";
 
 // External CSS.
 @import url('https://meyerweb.com/eric/tools/css/reset/reset.css');
