Added 'raw' route for Git files

--- a/templates/pkgbase/git/tree.html
+++ b/templates/pkgbase/git/tree.html
@@ -10,6 +10,7 @@
 
         <div class="pages">
             <p>Viewing <code>/{{ file }}</code>.</p>
+            <p><a href="/pkgbase/{{ pkgbase.Name }}/git/raw/{{ file }}">View raw</a>.</p>
             <p><a href="/pkgbase/{{ pkgbase.Name }}/git/#git-tree">Click here</a> to go back to the Git tree for <a href="/pkgbase/{{ pkgbase.Name }}">{{ pkgbase.Name}}</a>.</p>
 
             {# We know the syntax for PKGBUILDs and .SRCINFO, so fill in the class here if so. #}
