Fixed line heigh for header items
'line-height' in the header was previously set to a wrong value due to a global default in the main SCSS file. Changed it so the header looks consistent with that on the homepage.

--- a/media/scss/header.scss
+++ b/media/scss/header.scss
@@ -51,6 +51,7 @@ header {
 			font-size: 1.15em;
 			margin: 0 0.75em 0em;
 			display: inline;
+			line-height: 1em; // We have a global line height default of 1.6em. We set it to 1em here so it aligns with the line height on the makedeb homepage.
 		}
 		
 		p {
