--- a/media/scss/main.scss
+++ b/media/scss/main.scss
@@ -173,7 +173,7 @@ fieldset, .field {
                         display: block;
                         background-color: lighten($light-grey, 8%);
 
-                        &:hover, &:focus {
+                        &:hover, &:active {
                                 background-color: lighten($light-grey, 6%);
                         }
                 }
@@ -233,4 +233,9 @@ fieldset, .field {
 		color: red;
 		opacity: 0.7;
 	}
+}
+
+// Hidden.
+.hidden {
+	display: none;
 }
