Began work on API routes
So far we can adopt and disown packages from the API interface. We'll add more endpoints as time goes on.

Also added links to the API and RPC interfaces to the footer.

--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -4,6 +4,8 @@
 	</div>
 	<div class="links">
 		<a href="/about">Instance Information</a>
+		<a href="/api">API</a>
+		<a href="/rpc">RPC Interface</a>
 		<a href="https://docs.{{ makedeb_url }}">Docs</a>
 		<a href="https://github.com/makedeb">GitHub</a>
 	</div>
