Added '/api/meta' endpoint

--- a/templates/api.html
+++ b/templates/api.html
@@ -27,6 +27,12 @@
         <br>
 
         <div class="item">
+            <h4><code>/api/meta</code> <code>GET</code></h4>
+            <hr>
+            <p>Shows current instance information. Currently includes SSH keys, number of packages, number of orphan packages, and number of trusted users.</p>
+        </div>
+
+        <div class="item">
             <h4><code>/api/test</code> <code>GET</code> <code>POST</code> <code>AUTH</code></h4>
             <hr>
             <p>Verifies that you are succesfully logged in.</p>
