--- a/templates/partials/body.html
+++ b/templates/partials/body.html
@@ -1,4 +1,6 @@
 <div id="content">
+    <div id="dimmer"></div>
+
     {% include 'partials/archdev-navbar.html' %}
 
     {% block body %}
@@ -7,3 +9,4 @@
 
     {% include 'partials/footer.html' %}
 </div>
+{# vim: set sw=4 expandtab: #}
