--- a/templates/partials/head.html
+++ b/templates/partials/head.html
@@ -3,7 +3,11 @@
 	<!-- Syntax highlighting in code blocks -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.4.0/highlight.min.js"></script>
 	<script>hljs.highlightAll();</script>
-	
+
+	<!-- Copy to clipboard functions -->
+	<script src="/static/js/copy.js"></script>
+	<script src="/static/js/codeblock-copy.js"></script>
+
 	<!-- CSS -->
 	<link rel="stylesheet" href="/static/css/style.css">
 
@@ -13,7 +17,6 @@
 	<!-- Alternate resources -->
 	<link rel="alternate" type="application/rss+xml" title="Newest Packages RSS" href="/rss">
 
-	<!-- Include local typeahead -->
 	<!--script type="text/javascript" src="/static/js/typeahead.js"></script -->
 
 	<title>MPR - {{ title | tr }}</title>
