Added notices about registration and password reset not working right now
Hetzner is blocking access to ports 25 and 465 for us since we just made our account there, and that's causing issues when sending out emails, which are required for email and password resets.

We'll move the MPR back to Linode in a few days if we can't get this resolved in time.

--- a/templates/partials/account_form.html
+++ b/templates/partials/account_form.html
@@ -19,6 +19,10 @@
         <input type="hidden" name="Action" value="{{ form_type }}">
     </fieldset>
 
+    {% if form_type != "UpdateAccount" %}
+        <p><strong>We're currently experiencing issues with registrations. Reach out in the MPR's <a href="https://docs.{{ makedeb_url }}/support/obtaining-support/">support rooms</a> for current information on creating an account.</strong></p>
+    {% endif %}
+
     <fieldset>
         <!-- Username -->
         <div class="item">
