--- a/templates/passreset.html
+++ b/templates/passreset.html
@@ -2,6 +2,8 @@
 {% block body %}
     <div class="box">
         <h2>{% trans %}Password Reset{% endtrans %}</h2>
+                <p><strong>We're currently experiencing issues with password resets. Reach out in the MPR's <a href="https://docs.{{ makedeb_url }}/support/obtaining-support/">support rooms</a> for current information or if you require immediate action.</strong></p>
+
 
         <p>
             {% if step == "confirm" %}
