Finished up our changes
Now we just need to write unit tests for our changes. A few of the unit tests are also failing currently, but we'll get those fixed up later before we merge.

--- a/media/scss/main.scss
+++ b/media/scss/main.scss
@@ -14,6 +14,7 @@
 @import "animations";
 @import "helpers";
 @import "dimmer";
+@import "notice";
 
 // External CSS.
 @import url('https://meyerweb.com/eric/tools/css/reset/reset.css');
