--- a/media/scss/variables.scss
+++ b/media/scss/variables.scss
@@ -7,6 +7,7 @@ $orange: #ed743b;
 $orange-hover: #d95618;
 $light-orange: #ed7c47;
 $silver: #eeeeee;
+$archlinux-blue: #0796DE;
 
 $inactive-link: #919090;
 $header-bg-color: #f2f2f2;
