--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -5,8 +5,8 @@
 	<div class="links">
 		<a href="/about">Instance Information</a>
 		<a href="/api">API</a>
-		<a href="/rpc">RPC Interface</a>
-		<a href="https://docs.{{ makedeb_url }}">Docs</a>
+		<a href="/mpr-archives">MPR Archives</a>
+		<a href="https://github.com/makedeb/mprweb">Report an Issue</a>
 		<a href="https://github.com/makedeb">GitHub</a>
 	</div>
 </footer>
