--- a/templates/rpc.html
+++ b/templates/rpc.html
@@ -1,6 +1,10 @@
 {% extends "partials/layout.html" %}
 {% block body %}
     <div class="box field">
+        <div class="notice warning">
+            <p>The RPC interface is scheduled to be removed in the future. Users should consider migration to the package archives if they need to query packages from the MPR.</p>
+        </div>
+
         <div class="item">
             <h1>{{ "RPC Interface" }}</h2>
             <hr>
