--- a/templates/rpc.html
+++ b/templates/rpc.html
@@ -2,7 +2,7 @@
 {% block body %}
     <div class="box field">
         <div class="notice warning">
-            <p>The RPC interface is scheduled to be removed in the future. Users should consider migration to the package archives if they need to query packages from the MPR.</p>
+            <p>The RPC interface is scheduled to be removed in the future. Users should migrate to the <a href="/mpr-archives">package archives</a> if they need to query packages from the MPR.</p>
         </div>
 
         <div class="item">
